fn-usage/tests/rust_analyzer/snapshots/rust_analyzer___test_rust_analyzer-4.snap
---
source: fn-usage/tests/rust_analyzer/main.rs
expression: short_usage
---
[
    (
        "main.rs",
        "    fn fmt(&self, f: &mut std::fmt::Formatter<'_>) -> std::fmt::Result {",
        "0",
    ),
    (
        "main.rs",
        "    fn impl_method(&self) {",
        "50",
    ),
    (
        "main.rs",
        "    fn in_foo() {",
        "33.333336",
    ),
    (
        "main.rs",
        "fn foo() {",
        "16.666668",
    ),
    (
        "main.rs",
        "fn main() {",
        "0",
    ),
    (
        "other_file.rs",
        "pub fn other_file_method() {}",
        "66.66667",
    ),
]
