fn-usage/tests/rust_analyzer/snapshots/rust_analyzer___test_rust_analyzer.snap
---
source: fn-usage/tests/rust_analyzer/main.rs
expression: short_project_files
---
[
    "main.rs",
    "other_file.rs",
]
